# pyCaratheodory

./: .gitignore  README.md  pyproject.toml
caratheodory/: __init__.py  caratheodory.py
examples/: example.ipynb  example.py  example_input.txt  example_output.txt
