[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Caratheodory_Matsubara_extrapolation"
version = "0.0.1"
authors = [
  { name="Sergei Iskakov", email="iskakoff@q-solvers.ru" },
]
description = "Python package to perform temperature extrapolation of Matsubara frequency data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CQMP/pyCaratheodory"
